--- a/build.yaml
+++ b/build.yaml
@@ -179,11 +179,11 @@ include:
 
   ### SOFLEV2 SOFLEV1 SOFLEPLUS START ###
   # nice!oled sofle
-  - board: nice_nano_v2
-    shield: sofle_left 
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Sofle_Oled\"  -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
-    artifact-name: nice_sofle_left
-    snippet: studio-rpc-usb-uart
+ # - board: nice_nano_v2
+ #   shield: sofle_left 
+ #   cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Sofle_Oled\"  -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
+  #  artifact-name: nice_sofle_left
+ #   snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: sofle_right 
     cmake-args: -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
